--- a/src/App.css
+++ b/src/App.css
@@ -92,3 +92,15 @@
   text-shadow: 2px 12px #222;
   animation: waveIn 3s;
 }
+@media only screen and (max-width: 1100px) {
+  .spooky {
+      position: relative;
+      top: unset;
+      left: unset;
+      transform: translate(0%, 0%);
+      overflow-wrap:break-word;
+      width: 100%;
+      font-size: 1.5em;
+      text-align: center;
+  }
+}
